# pydig

./: .gitignore  Dockerfile  Makefile  README  README.md  RFC  TODO  pydig  pydig.1  pyproject.toml  setup.py
pydiglib/: __init__.py  common.py  dnsmsg.py  dnsparam.py  edns.py  https.py  main.py  name.py  options.py  query.py  rdata.py  rr_svcb.py  tls.py  tsig.py  util.py  walk.py  windows.py
